# django-bootstrap-pagination

./: MANIFEST.IN  MANIFEST.in  README.rst  setup.cfg
pagination/static/pagination/css/: style.css
pagination/templates/pagination/: pagination.html
pagination/templatetags/: pagination.py
